--- a/infra/mcp-servers/fetch-mcp/package.json
+++ b/infra/mcp-servers/fetch-mcp/package.json
@@ -8,13 +8,49 @@
   },
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "audit": "npm audit",
+    "audit:fix": "npm audit fix",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch",
+    "lint": "eslint .",
+    "security:scan": "npm audit && npm run lint",
+    "dev": "nodemon index.js"
   },
-  "keywords": ["mcp", "fetch", "http", "url"],
+  "keywords": [
+    "mcp",
+    "fetch",
+    "http",
+    "url"
+  ],
   "author": "IDP Governance",
   "license": "ISC",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.12.0",
+    "@modelcontextprotocol/sdk": "^0.6.0",
     "axios": "^1.9.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
+    "@types/jest": "^29.5.8",
+    "eslint": "^8.54.0",
+    "nodemon": "^3.0.2"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coverageDirectory": "coverage",
+    "collectCoverageFrom": [
+      "*.js",
+      "!coverage/**",
+      "!node_modules/**"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 80,
+        "statements": 80
+      }
+    }
   }
 }
