--- a/infra/mcp-servers/git-mcp/package.json
+++ b/infra/mcp-servers/git-mcp/package.json
@@ -6,13 +6,50 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "node test.js"
+    "test": "jest",
+    "audit": "npm audit",
+    "audit:fix": "npm audit fix",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch",
+    "lint": "eslint .",
+    "security:scan": "npm audit && npm run lint",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.6.0",
     "simple-git": "^3.21.0"
   },
-  "keywords": ["git", "mcp", "version-control", "idp", "governance"],
+  "keywords": [
+    "git",
+    "mcp",
+    "version-control",
+    "idp",
+    "governance"
+  ],
   "author": "IDP Team",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
+    "@types/jest": "^29.5.8",
+    "eslint": "^8.54.0",
+    "nodemon": "^3.0.2"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coverageDirectory": "coverage",
+    "collectCoverageFrom": [
+      "*.js",
+      "!coverage/**",
+      "!node_modules/**"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 80,
+        "statements": 80
+      }
+    }
+  }
 }
