--- a/infra/mcp-servers/language-server-mcp/package.json
+++ b/infra/mcp-servers/language-server-mcp/package.json
@@ -6,7 +6,14 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "node test.js"
+    "test": "jest",
+    "audit": "npm audit",
+    "audit:fix": "npm audit fix",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch",
+    "lint": "eslint .",
+    "security:scan": "npm audit && npm run lint",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.6.0",
@@ -14,7 +21,38 @@
     "vscode-languageserver": "^9.0.0",
     "vscode-languageserver-textdocument": "^1.0.0"
   },
-  "keywords": ["mcp", "language-server", "code-intelligence", "typescript", "javascript", "lsp"],
+  "keywords": [
+    "mcp",
+    "language-server",
+    "code-intelligence",
+    "typescript",
+    "javascript",
+    "lsp"
+  ],
   "author": "IDP Infrastructure Team",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
+    "@types/jest": "^29.5.8",
+    "eslint": "^8.54.0",
+    "nodemon": "^3.0.2"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coverageDirectory": "coverage",
+    "collectCoverageFrom": [
+      "*.js",
+      "!coverage/**",
+      "!node_modules/**"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 80,
+        "statements": 80
+      }
+    }
+  }
 }
