[Code] Finalize repository cleanup and exclude embedded repos
- Updated .gitignore to exclude embedded repositories
- Final update to shotgun-code development tool
- Repository cleanup complete with 12 organized commits

Related to: IDP Governance Consolidation v2.0

--- a/.gitignore
+++ b/.gitignore
@@ -242,3 +242,8 @@ infra/browser-automation/e2b_venv/
 .vscode/tasks.json
 .vscode/c_cpp_properties.json
 .vscode/settings.json.bak
+
+# Embedded Git Repositories (handled separately)
+clients/shufa-and-leadership/
+infra/claude-code-router-integration/
+infra/mcp-servers/mcp-crawl4ai-install/mcp-crawl4ai-rag/
